<?xml version="1.0"?>
<package format="2">
  <name>myride_test_server</name>
  <version>0.0.0</version>
  <description>The test nodes and websocket based http server package</description>

<maintainer email="myride@todo.todo">myride</maintainer>

  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/myride_test_server</url> -->

  <author email="oakyildiz@wpi.edu">Ozan Akyildiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_websocket</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
